ช่องทดลองเขียนโค้ด / บทที่4
แบบทดสอบ บทที่ 4

> pre-test
> post-test

--- a/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
+++ b/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
@@ -516,13 +516,11 @@
                 <br></p>
                 <div class="group2"  style="margin: 20px;">
                     <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                </div>
                     <div class="form-group">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button>
                     <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="code" required></textarea>
-
-                </div></div>
+                </div>
                 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 16.1 (1 คะแนน)</p>
@@ -543,15 +541,11 @@
                 <br></p>
                 <div class="group2" style="margin: 20px;">
                     <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
                     <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
-
-                </div></div>
-                
-
+                </div>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 17.1 (1 คะแนน)</p>
                     <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
@@ -571,13 +565,11 @@
                 </p>
                 <div class="group2 style="margin: 20px;">
                     <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
                     <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
-
-                </div></div>
+                </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 18.1 (1 คะแนน)</p>
@@ -600,13 +592,11 @@
                 </p>
                 <div class="group2" style="margin: 20px;">
                     <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
                     <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
-
-                </div></div>
+                </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 19.1 (1 คะแนน)</p>
@@ -628,13 +618,11 @@
                 </p>
                 <div class="group2" style="margin: 20px;">
                     <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    
-                    <div class="form-group">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button>
-                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
-    
-                </div></div>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 20.1 (1 คะแนน)</p>
