--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -1,6 +1,17 @@
 
 <!-- MIDDLE 1 -->
 
+<style>
+    a {
+        color: rgb(65, 65, 65);
+        text-decoration: none;
+    }
+    a:hover {
+        color: blueviolet;
+        font-size: large;
+    }
+</style>
+
 <div id = "content" class="container">
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
@@ -18,53 +29,53 @@
                             <div lang="ja">
                                 <p class="wrapbox auto">
                                     <b>1. Algorithms and Flowcharts </b>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Algorithms_and_Flowcharts" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest"">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. Datatype and Variable </b>
-                                    <br><a href="/course-Datatype_and_Variable-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Datatype_and_Variable" style="color:black">เนื้อหาบทเรียน </a>
-                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Datatype_and_Variable-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Datatype_and_Variable">เนื้อหาบทเรียน </a>
+                                    <br><a href="/course-Datatype_and_Variable-quiz">แบบทดสอบหลังเรียน</a>
                                     <br><br>
                                  </p>   
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
-                                    <br><a href="/course-Input_and_Output-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Input_and_Output" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Input_and_Output-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Input_and_Output-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Input_and_Output">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Input_and_Output-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
-                                    <br><a href="/course-Operators_and_Expressions-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Operators_and_Expressions" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Operators_and_Expressions-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Operators_and_Expressions-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Operators_and_Expressions">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Operators_and_Expressions-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>5. Selection Statement&Output </b>
-                                    <br><a href="/course-Selection_Statement" style="color:black">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Selection_Statement">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-InputOutput-quiz">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>6. Loop Statement </b>
-                                    <br><a href="/course-Loop_Statement" style="color:black"> เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Loop_Statement"> เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Selection_Statement-quiz">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
-                                    <br><a href="/course-Array_and_String" style="color:black">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Array_and_String">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Loop_Statement-quiz">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
-                                    <br><a href="/course-Functions" style="color:black">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Functions">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Pointers-quiz">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <!--<p class="wrapbox auto">
                                     <b>8. Functions </b>
-                                    <br><a href="/course-Pointers" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Pointers" >เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Pointers-quiz" >แบบทดสอบหลังเรียน</a>
                                 </p>-->
                                 
                               </div>
