--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -50,7 +50,7 @@
             <% } %>
             <% if (user.role === 'Student') { %>
               <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;">Course </a></li>
-              <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project </a></li>
+              <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Projrct</a></li>
             <% } %>
             <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>
             <% } else { %>
