--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -89,7 +89,8 @@
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ข้อมูลประเภท int ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
-                <br><br><p id="demo1"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo1"> </p>
                 </div>
                 <div class="ans">
                     <div>
@@ -110,7 +111,8 @@
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
-                <br><br><p id="demo2"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo2"> </p>
                 </div>
                 <div class="ans">
                     <div>
@@ -131,7 +133,8 @@
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ข้อมูลประเภท char ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
-                <br><br><p id="demo3"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo3"> </p>
                 </div>
                 <div class="ans">
                     <div>
@@ -156,7 +159,8 @@
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
-                <br><br><p id="demo4"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo4"> </p>
                 </div>
                 <div class="ans">
                     <div>
@@ -177,7 +181,8 @@
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ตัวแปรที่ประกาศภายนอกฟังก์ชันและใช้งานได้ทั้งโปรแกรมนั้นเรียกว่าอะไร</h5>
-                <br><br><p id="demo5"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo5"> </p>
                 
                 </div>
                 <div class="ans">
@@ -199,7 +204,8 @@
             <div class="gamecontent">
                 <div class="question">
                 <h5>ตัวแปรที่ประกาศภายในฟังก์ชันและใช้งานได้เฉพาะภายในฟังก์ชันนั้นเรียกว่าอะไร</h5>
-                <br><br><p id="demo6"> </p>
+                <br><br>
+                <p style="text-align: center;" id="demo6"> </p>
                 
                 </div>
                 <div class="ans">
@@ -226,15 +232,15 @@
             <div class="gamecontent-T">
                 <div  class="question-T">
                 <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
-                <p id="demo7">#include < stdio.h > 
+                <p>#include < stdio.h > 
                 <br>int main() {
                 <br>&ensp;int a = 20;
                 <br>&ensp;int b = 30;
                 <br>&ensp;printf("%d", a = b);
                 <br>&ensp;return 0;
                 <br>}
-
                 </p>
+                <p style="text-align: center;" id="demo7"></p>
                 </div>
                 <div class="ans">
                     <div>
@@ -253,7 +259,7 @@
             <div class="gamecontent-T">
                 <div  class="question-T">
                 <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
-                <p id="demo8">#include < stdio.h >
+                <p>#include < stdio.h >
                 <br>#define MAX_VALUE 80
                 <br>int main() {
                 <br>&ensp;const int x = 8;
@@ -264,9 +270,8 @@
                 <br>&ensp;printf("%d", MAX_VALUE);
                 <br>&ensp;return 0;
                 <br>}
-
                 </p>
-                
+                <p style="text-align: center;" id="demo8"></p>
                 </div>
                 <div class="ans">
                     <div>
@@ -290,7 +295,7 @@
             <div class="gamecontent-E">
                 <div  class="question-E">
                 <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
-                <p id="demo9">#include < stdio.h > 
+                <p>#include < stdio.h > 
                 <br>#define MAX_VALUE 120
                 <br>int main() {
                 <br>&ensp;const int x = 30;
@@ -301,8 +306,8 @@
                 <br>&ensp;printf("%d", MAX_VALUE);
                 <br>&ensp;return 0;
                 <br>}
-
                 </p>
+                <p style="text-align: center;" id="demo9"></p>
                 </div>
                 <div class="ans">
                     <div>
@@ -331,7 +336,7 @@
             <div class="gamecontent-E">
                 <div  class="question-E">
                 <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
-                <p id="demo10">#include < stdio.h >
+                <p>#include < stdio.h >
                 <br>#define MAX_VALUE 100
                 <br>int main() {
                 <br>&ensp;const int x = 80;
@@ -342,9 +347,8 @@
                 <br>&ensp;printf("%d", MAX_VALUE);
                 <br>&ensp;return 0;
                 <br>}
-
                 </p>
-                
+                <p style="text-align: center;" id="demo10"></p>
                 </div>
                 <div class="ans">
                     <div>
