--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -39,10 +39,10 @@
 
     <!-- end of Narbar-->
 <!-- LEFT -->
-    <main class="grid-container">
-        <div class="item1"> 
+    <main>
+        <div id="content" class="container"> 
             <thead>
-                <div>
+                <div class="item1">
                     <p><b>Name :</b> <%= person.name%></p> 
                     <b>Class</b>
                         <% if (Object.keys(result).length != 0) { %> :
@@ -64,7 +64,7 @@
                 </div>    
             </thead>
         </div>     
-        <div class="item2"> 
+        <div id="content" class="container"> 
             <thead>
                 <div class="card ">
                     <div class="card-header">
@@ -149,7 +149,7 @@
 <!-- MID -->
     <!-- SKILLS-->
 
-    <div class="content3">
+    <div id="content" class="item3">
         <% if(isNaN(BasicPercent)){ %>
 
         <% } else{ %>  
@@ -206,22 +206,7 @@
              
         <% } %>
 <br>
-        <% if (Object.keys(RecommendaResult).length !== 0 && RecommendaResult[0].RecommendCourse != "null"  ) { %>
-            <!-- Recommendation --> 
-            <%- include('../student/layouts/recommendation') %>
-            <% } else { %>
-                <h1 id = 'content'><svg height="30" width="40" viewBox="0 0 384 512">
-                        <path d="M112.1 454.3c0 6.297 1.816 12.44 5.284 17.69l17.14 25.69c5.25 7.875 17.17 14.28 26.64 14.28h61.67c9.438 0 21.36-6.401 26.61-14.28l17.08-25.68c2.938-4.438 5.348-12.37 5.348-17.7L272 415.1h-160L112.1 454.3zM192 0C90.02 .3203 16 82.97 16 175.1c0 44.38 16.44 84.84 43.56 115.8c16.53 18.84 42.34 58.23 52.22 91.45c.0313 .25 .0938 .5166 .125 .7823h160.2c.0313-.2656 .0938-.5166 .125-.7823c9.875-33.22 35.69-72.61 52.22-91.45C351.6 260.8 368 220.4 368 175.1C368 78.8 289.2 .0039 192 0zM288.4 260.1c-15.66 17.85-35.04 46.3-49.05 75.89h-94.61c-14.01-29.59-33.39-58.04-49.04-75.88C75.24 236.8 64 206.1 64 175.1C64 113.3 112.1 48.25 191.1 48C262.6 48 320 105.4 320 175.1C320 206.1 308.8 236.8 288.4 260.1zM176 80C131.9 80 96 115.9 96 160c0 8.844 7.156 16 16 16S128 168.8 128 160c0-26.47 21.53-48 48-48c8.844 0 16-7.148 16-15.99S184.8 80 176 80z"/>
-                    </svg> Project Unlock  </h1>
-                    <div class="box bg-light  mb-5 shadow" >
-                        
-                        <button type="button" class="btn btn-outline-dark btn-sm btn-block " data-bs-toggle="modal" data-bs-target="#RecommendSetting">
-                            <svg height="20" width="20" viewBox="0 0 512 512">
-                            <path d="M349.565 98.783C295.978 98.783 251.721 64 184.348 64c-24.955 0-47.309 4.384-68.045 12.013a55.947 55.947 0 0 0 3.586-23.562C118.117 24.015 94.806 1.206 66.338.048 34.345-1.254 8 24.296 8 56c0 19.026 9.497 35.825 24 45.945V488c0 13.255 10.745 24 24 24h16c13.255 0 24-10.745 24-24v-94.4c28.311-12.064 63.582-22.122 114.435-22.122 53.588 0 97.844 34.783 165.217 34.783 48.169 0 86.667-16.294 122.505-40.858C506.84 359.452 512 349.571 512 339.045v-243.1c0-23.393-24.269-38.87-45.485-29.016-34.338 15.948-76.454 31.854-116.95 31.854z"/></svg>
-                            <h4>โปรดเลือกการแนะนำ</h4>
-                        </button>
-                </div>
-            <% } %>
+        
         
 
         
